[package]
name = "poke"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neinteen/poke"
description = "Inspired by the classic touch command."
keywords = ["cli", "touch", "files", "filetimes"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "poke"
path = "src/lib.rs"

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
filetime = "0.2.15"
thiserror = "1.0.30"
chrono = "0.4.19"
chrono-english = "0.1.7"
